--- a/scss/base/_general-styles.scss
+++ b/scss/base/_general-styles.scss
@@ -29,10 +29,6 @@ a {
     color: $text-blue !important;
 }
 
-a:visited {
-    color: $light-grey;
-}
-
 a:hover {
     color: $orange;
 }
